Arreglos de logos y imagenes

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Clase 1</title>
+    <title>Wanderlust Flights</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ad1a2965d2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
+
+
+
+    <link rel="icon" type="icon/png" href="img/LogoICO.png">
 </head>
 
 <body>
@@ -46,7 +50,7 @@
                             <li>
                                 <div class="log-titulo">
                                     <h1 class="nom_pag">Wanderlust</h1>
-                                    <img class="logo_pag" src="img//Logo2.png" alt="logo">
+                                    <img class="logo_pag" src="img/LogoPag.png" alt="logo">
                                 </div>
                                 <div class="eslg">
                                     <p class="eslogan">Disfruta tu viaje con diversion</p>
